--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -2,15 +2,13 @@
 
 add_subdirectory(Common)
 add_subdirectory(Daq)
-add_subdirectory(Example)
-add_subdirectory(Skeleton)
-add_subdirectory(TOF)
-add_subdirectory(EMCAL)
-add_subdirectory(MUON)
-add_subdirectory(TPC)
-add_subdirectory(ITS)
-add_subdirectory(MFT)
-add_subdirectory(PHOS)
-add_subdirectory(FT0)
-add_subdirectory(MID)
-add_subdirectory(TRD)
+#add_subdirectory(Example)
+#add_subdirectory(Skeleton)
+#add_subdirectory(TOF)
+#add_subdirectory(EMCAL)
+#add_subdirectory(TPC)
+#add_subdirectory(ITS)
+#add_subdirectory(MFT)
+add_subdirectory(ITSQCTrhesholdTask)
+#add_subdirectory(ITSQCClusterTask)
+#add_subdirectory(Dummy)
